src/test/deca/context/valid/with_object/type_instanceof_op.deca
class A {}
class B extends A {}
class C {}

{
    A a = new A();
    B b = new B();
    C c = new C();
    a instanceof A; a instanceof B; a instanceof C;
    a instanceof Object; null instanceof A; null instanceof Object;
    b instanceof A; b instanceof B; b instanceof C;
    c instanceof A; c instanceof B; c instanceof C;

    /* Bizarre... differences btw Type and instance ?
    a instanceof b; b instanceof c; a instanceof c;
    null instanceof a; */
}