src/test/deca/context/invalid/with-object/instanceof_op_wrong_left.deca
class A{}

{
    A a = new A();
    1 instanceof A;
}